<resources>
    <string name="app_name">konsilmed</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="allow_biomatric_authentication">Allow Biometric Authentication</string>
    <string name="no_account">NO Account ?</string>
    <string name="register_now">Register Now</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="doctors_list">Doctors List</string>
    <string name="filter">Filter</string>
    <string name="degree">Degree</string>
    <string name="submit">Submit</string>
    <string name="finger">Use your finger to login</string>
    <string name="patients">Patients</string>
    <string name="request_consulation">Request Consulation</string>
    <string name="requst_online_converstaion">Requst Online Converstaion</string>
    <string name="consulation_title">Consulation title</string>
    <string name="consualtion_details">Consualtion details</string>
    <string name="upload_photos_of_the_medical_consulation">Upload photos of the medical Consulation</string>
    <string name="complete_the_request">Complete the request</string>
    <string name="msg">Messages</string>
    <string name="final_report">Final report</string>
    <string name="files">Files</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="request_online_converstaion">Request online converstaion</string>
    <string name="make_a_complaint">Make a complaint</string>
    <string name="there_are_all_uploaded_file">these are all uploaded file</string>
    <string name="appoinments_available_for_dr">Appoinments available for Dr</string>
    <string name="info">Info</string>
    <string name="report">Report</string>
    <string name="view">View</string>
    <string name="select_specialty">Select Specialty</string>
    <string name="add_your_photo">Add Your Photo</string>
    <string name="add_your_name">Add Your Name</string>
    <string name="complaint_message">Current Complaint</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="consult_amp_chat">High-level consulting</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="english">English</string>
    <string name="germany">Germany</string>
    <string name="orrr">OR</string>
    <string name="full_name">Full Name</string>
    <string name="accept_all_items_and_conditions">I accept all the </string>
    <string name="Specialist">Specialities List</string>
    <string name="degrees">Degree :</string>
    <string name="rate">Rate :</string>
    <string name="doc_filters">Doctors Filters</string>
    <string name="filter_data_based_on">Filter Data Based On</string>
    <string name="advisory">Advisory</string>
    <string name="specialist">Specialist</string>
    <string name="ratess">Rate</string>
    <string name="consulation_price">Consulation Price</string>
    <string name="conversation">Conversation</string>
    <string name="conversation_price">Conversation Price</string>
    <string name="upload_files_of_the_medical_consulation">Upload files of the medical Consulation</string>
    <string name="counseling_status">counseling status :</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="there_is_a_medical_report_for_case">There is a medical report for case</string>
    <string name="date_of_report">date of report :</string>
    <string name="choose_file_to_uplaod">Choose file to uplaod</string>
    <string name="conversation_hour_rate">Conversation price :</string>
    <string name="please_select_from_the_available_periods">Please select from the available periods</string>
    <string name="date">Date :</string>
    <string name="duration">Duration :</string>
    <string name="conversation_link">Conversation Link :</string>
    <string name="notes_kindly_open_the_link_at_the_time_to_talk_with_doctor">notes kindly open the link at the time to talk with doctor</string>
    <string name="conversation_status_pp">Conversation status :</string>
    <string name="Personal_info">Personl Info</string>
    <string name="my_consultation">My Consultation</string>
    <string name="my_complaints">My Complaints</string>
    <string name="Policy">Policy</string>
    <string name="be_a_doctor">Be A Doctor</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_pass">Change password</string>
    <string name="add_ur_phone">Add your phone</string>
    <string name="add_your_ph">Add your photo</string>
    <string name="open">open</string>
    <string name="add_your_password">Add Your Password</string>
    <string name="add_your_email">Add Your Email</string>
    <string name="add_your_phone">Add Your Phone</string>
    <string name="welcome_to_konzil">Welcome To Konsilmed</string>
    <string name="chat_or_get_consultations_and_repoerts_from_doctors_in_all_fields_of_medicine_any_time_any_where_now">get consultations and repoerts from doctors in all fields of medicine any time any where now .</string>
    <string name="logged_in_successfully">Logged in Successfully...</string>
    <string name="Surgeries">Surgeries</string>
    <string name="Dental">Dental</string>
    <string name="Bones">Bones</string>
    <string name="heart_blood">Heart and blood vessels</string>
    <string name="Pediatrics">Heart and blood vessels</string>
    <string name="neurologo">Neurologo</string>
    <string name="language_changed_successfully">Language Changed Successfully....</string>
    <string name="doc_info">Doctor Info</string>
    <string name="online_con_details">Online Conversation Details</string>
    <string name="con_req">Consultation Request</string>
    <string name="patient_history">Please write your medical history</string>
    <string name="done">Done</string>
    <string name="pay">Pay</string>
    <string name="credit_card_type">Credit Card Type *</string>
    <string name="credit_card_number">Credit Card Number *</string>
    <string name="expiry_date">Expiry Date *</string>
    <string name="cvc">CVC *</string>
    <string name="_3_digits_at_the_back_of_your_card">3 digits at the back of your card</string>
    <string name="card_holder_name">Card Holder Name *</string>
    <string name="in_progress">In Progress...</string>
    <string name="payment">Payment</string>
    <string name="registed_suc">Registed Successfully</string>
    <string name="doctor">Head of department, Berlin Hospital</string>
    <string name="consultation">consultation</string>
    <string name="select_img">Please Select Photo</string>
    <string name="short_title">Title is too short!</string>
    <string name="desc">Descripition is too short!</string>
    <string name="pay_konsil">Pay for konsilmed</string>
    <string name="select_more_imgs">Please more than image</string>
    <string name="successfull_payment">Successfull Payment</string>
    <string name="Invalid">Invalid</string>
    <string name="short_msg">The message is too short!</string>
    <string name="no_msg">No Messages</string>
    <string name="no_medical_r">There Is No Medical Report</string>
    <string name="com_sent">Complaint Sent Successfully</string>
    <string name="no_consultation">No Consultation</string>
    <string name="email_token">Email Has Been Taken</string>
    <string name="phone_empty">phone is Empty or less than 8 numbers</string>
    <string name="empty_name">Name is Empty or less than 2 chars</string>
    <string name="empty_phone">Phone is Empty or less than 8 numbers</string>
    <string name="empty_mail">Email is Empty or short</string>
    <string name="short_user">Username id too short!</string>
    <string name="password_empty">Username id too short!</string>
    <string name="accept_condition">You must accept conditions to Sign up</string>
    <string name="cant_auth">Cant authenticated</string>
    <string name="cant_access">Cant Access</string>
    <string name="nodates">There are no dates</string>
    <string name="choose_time">Please choose appoienment time</string>
    <string name="edited_successfully">Edited successfully...</string>
    <string name="select_degree">You must select degree</string>
    <string name="select_rate">You must select rate</string>
    <string name="no_doctors">No Doctors</string>
    <string name="no_files">There is no files uploaded</string>
    <string name="uploading">Uploading...</string>
    <string name="upd_success">Uploaded Successfully</string>
    <string name="upd_failed">Uploading Failed</string>
    <string name="uploaded">Uploaded</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="tap_to_choose_desired_day">Tap to choose desired day</string>
    <string name="nobioavailable">No Bioavailable</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="faq">FAQ</string>
    <string name="treatment_ger">Treatment in germany </string>
    <string name="privacy">Privacy</string>
    <string name="consualtion_details_request">Consualtion details</string>
    <string name="email_val">Email is too short!</string>
    <string name="password_val">Password is too short!</string>
    <string name="error_mail_pass">Email or Password is incorrect</string>
    <string name="insert_promo">You must insert at least on character</string>
    <string name="invalid_promo">Invalid Promo Code</string>
    <string name="terms">AGB Konsilmed UG

General terms and conditions of Konsilmed UG (limited liability), Mainzer Landstra? E 50, 60328 Frankfurt am Main. ("Konsilmed"), for the use of the online consultation under and other under the portal advisory services

Konsilmed does not provide any medical advice and is itself not approved as a doctor or in any other medical profession. Konsilmed operates exclusively the technical service of the platform. The advisory service is provided by the participating doctors.

Part 1: Service users
            1. Contents of the services
(1) Konsilmed provides a technical platform that patients can use to get in touch with doctors. Patients can agree and conduct online counseling with the doctors. The video consultation takes place directly between the patient via an encrypted connection. Konsilmed only provides the technical processing of the service.
                (2) Konsilmed is not responsible for the content of communication between doctor and patient. Konsilmed does not offer any medical or therapeutic services. Neither the use of Konsilmed nor the agreement of online counseling with doctors replace a traditional visit to the doctor. See a doctor or psychotherapist on site or in an emergency, if necessary.
        (3) The use of Konsilmed is free of charge for the patients. Separate fees may be charged for the services provided by doctors. These are clearly identified to the patient. These services are billed directly to the patient via Konsilmed, even if the medical advice is provided directly by the doctors. In this respect, Konsilmed only acts as a clearing house.
(4) As soon as the patient contacts a doctor, there is a separate contract with the doctors condition. This can result in costs for the patient. The doctor will inform the patient of this separately.

    </string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
</resources>