<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/consulation_request"
    tools:context=".scenarios.scenario_payment.controller.payment">
<include layout="@layout/toolbar_default"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/payment_bg"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_type"
        android:textColor="@color/color3"
        android:textSize="@dimen/_13ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/cardtype"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/personal_info_item_bg"
       />
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"/>


        </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_number"
        android:textColor="@color/color3"
        android:textSize="@dimen/_13ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_15sdp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:background="@drawable/personal_info_item_bg"
        android:layout_marginRight="@dimen/_20sdp"
        android:hint="123456789101112"
        android:layout_marginLeft="@dimen/_20sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date"
        android:textColor="@color/color3"
        android:textSize="@dimen/_13ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_15sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:weightSum="1"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp">
    <EditText
        android:layout_weight=".5"
        android:layout_width="0dp"
        android:paddingLeft="@dimen/_10sdp"
        android:hint="mm"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/personal_info_item_bg"
        />
        <EditText
        android:layout_weight=".5"
        android:layout_width="0dp"
        android:hint="yy"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/personal_info_item_bg"
        />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cvc"
        android:textColor="@color/color3"
        android:textSize="@dimen/_13ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_15sdp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="EX. 445"
        android:paddingLeft="@dimen/_10sdp"
        android:background="@drawable/personal_info_item_bg"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3_digits_at_the_back_of_your_card"
        android:textSize="@dimen/_11ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"/>
    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/ccv"
        android:layout_gravity="right"
        android:scaleType="fitXY"
        android:layout_marginRight="@dimen/_30sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_holder_name"
        android:textColor="@color/color3"
        android:textSize="@dimen/_13ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:background="@drawable/personal_info_item_bg"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"/>
    <Button
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/pay"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:id="@+id/pay"
        android:textSize="@dimen/_12ssp"
        android:textColor="@android:color/white"
        android:background="@drawable/buttom_bg"/>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>