<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pro_bg"
    tools:context=".scenarios.scenario_Consulation_request.consulation_request">
    <include layout="@layout/toolbar_default"
        android:id="@+id/toolbar_actionbar"
        />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consulation_title"
        android:textColor="@color/color2"
        android:textSize="@dimen/_13ssp"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:background="@drawable/form_bg_consulation"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consualtion_details"
        android:textColor="@color/color2"
        android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_20sdp"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:gravity="left|top"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/form_bg_consulation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_photos_of_the_medical_consulation"
            android:textColor="@color/color2"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_20sdp"
            />
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:id="@+id/upload_img"
            android:layout_marginTop="@dimen/_7sdp"
            android:src="@drawable/upload_img"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload files of the medical Consulation"
            android:textColor="@color/color2"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_20sdp"
            />
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/upload_file"
            android:tint="@color/color3"
            android:src="@drawable/upload_file"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:background="@drawable/buttom_bg"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/complete_the_request"
            android:id="@+id/complete_req"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>