<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/color1"
    tools:context=".scenarios.scenario_sign_up.Controller.sign_up">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/konzil_logo"
                android:layout_marginTop="@dimen/_15sdp"/>
            <EditText
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/username"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/full_name"
                android:textColorHint="@color/color2"
                android:textSize="@dimen/_10ssp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_5sdp"
                android:background="@drawable/form_bg"
                />
            <EditText
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:inputType="number"
                android:hint="@string/phone"
                android:id="@+id/phone"
                android:textColorHint="@color/color2"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_5sdp"
                android:background="@drawable/form_bg"
                />
            <EditText
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:hint="@string/e_mail_address"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/color2"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_5sdp"
                android:background="@drawable/form_bg"
                />
            <EditText
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textColorHint="@color/color2"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_10ssp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_5sdp"
                android:background="@drawable/form_bg"
                />
            <CheckBox
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_25sdp"
                android:paddingLeft="@dimen/_7sdp"
                android:layout_height="@dimen/_20sdp"
                android:textSize="@dimen/_11ssp"
                android:id="@+id/accept_condition"
                android:text="@string/accept_all_items_and_conditions"
                />

            <Button
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/signup"
                android:textColor="@android:color/white"
                android:background="@drawable/buttom_bg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/or_bg"/>
                <ImageView
                    android:layout_width="@dimen/_9sdp"
                    android:layout_height="@dimen/_9sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:src="@drawable/or_bg"/>
                <ImageView
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:src="@drawable/or_bg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orrr"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/color2"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"/>
                <ImageView
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/or_bg"/>
                <ImageView
                    android:layout_width="@dimen/_9sdp"
                    android:layout_height="@dimen/_9sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:src="@drawable/or_bg"/>
                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:src="@drawable/or_bg"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/twitter"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/gmail"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_8sdp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/facebook"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_8sdp"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>