<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".scenarios.scenario_Consulation_result.Controller.Consulation_result.consulation_result">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar_default"/>
    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/radioRealButtonGroup_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center_vertical"
        android:elevation="2dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        app:rrbg_animateTexts_enter="overshoot"
        app:rrbg_animateTexts_enterDuration="500"
        app:rrbg_backgroundColor="@color/color3"
        app:rrbg_checkedPosition="2"
        app:rrbg_dividerColor="@color/cardview_light_background"
        app:rrbg_dividerPadding="0dp"
        app:rrbg_dividerRadius="0dp"
        app:rrbg_dividerSize="2dp"
        app:rrbg_enableDeselection="false"
        app:rrbg_radius="10dp"
        app:rrbg_selectorAboveOfBottomLine="false"
        app:rrbg_selectorColor="@color/color4"
        app:rrbg_selectorFullSize="true"
        app:rrbg_selectorSize="0dp">
        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawableHeight="48dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_text="@string/msg"
            app:rrb_textColor="@color/cardview_light_background"
             />
        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawableHeight="36dp"
            app:rrb_drawableWidth="36dp"
            app:rrb_text="@string/final_report"
            app:rrb_textColor="@color/cardview_light_background"
            />
        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawableHeight="24dp"
            app:rrb_drawableWidth="24dp"
            app:rrb_text="@string/files"
            app:rrb_textColor="@color/cardview_light_background"
            />
    </co.ceryle.radiorealbutton.RadioRealButtonGroup>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frag"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        />
</LinearLayout>
</android.support.v4.widget.DrawerLayout>